=head1 NAME

List of significant changes to Data::Tumbler

=encoding ISO8859-1

=cut

=head2 Changes in Data::Tumbler 0.001 - 15th March 2014

  Initial release base on work in https://github.com/perl5-dbi/DBI-Test

=cut