@@ -1,0 +1,2 @@
+
+Remove dependency on Class::Tiny
